# mkdocs-asciidoctor-backend

./: README.md  hack.md  pyproject.toml
.github/workflows/: gh-pages-demo.yml  release.yml
asciidoc_backend/: __init__.py
asciidoc_backend/assets/: asciidoc.css  strip_callouts.js
asciidoctor_backend/: __init__.py  asciidoctor_client.py  file_processor.py
asciidoctor_backend/assets/: asciidoc.css  asciidoctor_server.rb
demo/: mkdocs.yml
demo/docs/: index.adoc  markdown-kitchen-sink.md  md-kitchen-sink.md  page-2.adoc
demo/docs/modules/: module.adoc
demo/docs/snippets/: symlink-test.adoc
