[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-asciidoctor-backend"
version = "0.0.1"
description = "Asciidoctor backend for MkDocs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mkdocs>=1.6",
  "beautifulsoup4>=4.11"
]

[project.entry-points."mkdocs.plugins"]
asciidoctor_backend = "asciidoctor_backend:AsciiDoctorPlugin"

[project.optional-dependencies]
dev = ["pytest>=8"]

[flake8]
ignore = "E501"

[tool.setuptools]
packages = ["asciidoctor_backend"]

[tool.setuptools.package-data]
asciidoc_backend = ["assets/*.css", "assets/*.js", "assets/*."]